still working on the home page

--- a/src/components/featured/Featured.scss
+++ b/src/components/featured/Featured.scss
@@ -7,7 +7,7 @@
     justify-content: center;
 
     .container {
-        background-image: url("../../../public/images/hero-md-x1.webp");
+        background-image: url("../../../images/hero-md-x1.webp");
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: 16px;
