--- a/src/app.scss
+++ b/src/app.scss
@@ -3,4 +3,7 @@
         text-decoration: none;
         color: inherit;
     }
+    --swiper-navigation-size: 16px;
+
+    font-family: Roboto, Arial, sans-serif;
 }
